salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/OSFMX_DevelopmentSettings__mdt.object-meta.xml
<CustomObject>
    <description>Almacena parámetros de configuración utilizados por desarrollos del proyecto One Salesforce.</description>
    <label>Configuración De Desarrollos</label>
    <pluralLabel>Configuraciones De Desarrollos</pluralLabel>
</CustomObject>