salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/OSFMX_IsHttpsOnGHitss__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IsHttpsOnGHitss__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activar en los ambientes donde los servicios web proporcionados por Global Hitss se entreguen a través de HTTPS.</description>
    <inlineHelpText>Activar en los ambientes donde los servicios web proporcionados por Global Hitss se entreguen a través de HTTPS.</inlineHelpText>
    <label>Activar HTTPS Global Hitss</label>
    <type>Checkbox</type>
</CustomField>