salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/OSFMX_MpAccountMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpAccountMultipagos__c</fullName>
    <description>Identificador único de cliente, asignado a Engie por Multipagos.</description>
    <label>Id Cliente Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>