salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/OSFMX_MpUrlFailureMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpUrlFailureMultipagos__c</fullName>
    <description>URL de página del portal web de clientes, donde se podrá recibir la respuesta de fallo desde Multipagos.</description>
    <label>URL de Respuesta de Error Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>