salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/OSFMX_MpUrlSuccessMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpUrlSuccessMultipagos__c</fullName>
    <description>URL de página del portal web de clientes, donde se podrá recibir la respuesta exitosa desde Multipagos.</description>
    <label>URL de Respuesta Exitosa Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>