salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/OSFMX_PriceListForQuoteId__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PriceListForQuoteId__c</fullName>
    <description>Identificador de la lista de precios utilizada para la creación automática de QuoteLineItems.</description>
    <inlineHelpText>Identificador de la lista de precios utilizada para la creación automática de QuoteLineItems.</inlineHelpText>
    <label>Lista De Precios Quote</label>
    <length>18</length>
    <type>Text</type>
</CustomField>