salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/OSFMX_PrivateKeyMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PrivateKeyMultipagos__c</fullName>
    <description>Llave privada asignada a Engie por Multipagos.</description>
    <label>Llave Privada Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>