salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/OSFMX_UrlToDownloadInvoices__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_UrlToDownloadInvoices__c</fullName>
    <label>URL Para Descarga De Facturas</label>
    <required>true</required>
    <type>Url</type>
</CustomField>