salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/PBookEntryDistComerId__c.field-meta.xml
<CustomField>
    <fullName>PBookEntryDistComerId__c</fullName>
    <description>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Distribucion + Comercializacion&quot;.</description>
    <inlineHelpText>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Distribucion + Comercializacion&quot;.</inlineHelpText>
    <label>PricebookEntry Distrib+Comercialización</label>
    <length>18</length>
    <type>Text</type>
</CustomField>