salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/PBookEntryDistribSimpleId__c.field-meta.xml
<CustomField>
    <fullName>PBookEntryDistribSimpleId__c</fullName>
    <description>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Distribucion Simple&quot;.</description>
    <inlineHelpText>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Distribucion Simple&quot;.</inlineHelpText>
    <label>PricebookEntry Distribucion Simple</label>
    <length>18</length>
    <type>Text</type>
</CustomField>