salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/PBookEntryGasDitribId__c.field-meta.xml
<CustomField>
    <fullName>PBookEntryGasDitribId__c</fullName>
    <description>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Gas + Distribución&quot;.</description>
    <inlineHelpText>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Gas + Distribución&quot;.</inlineHelpText>
    <label>PricebookEntry Gas + Distribucion</label>
    <length>18</length>
    <type>Text</type>
</CustomField>