salesforce_sfdx/main/default/objects/OSFMX_DevelopmentSettings__mdt/fields/PBookEntryGasId__c.field-meta.xml
<CustomField>
    <fullName>PBookEntryGasId__c</fullName>
    <description>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Gas&quot;.</description>
    <inlineHelpText>Identificador Salesforce del registro PricebookEntry a utilizar para &quot;Gas&quot;.</inlineHelpText>
    <label>PricebookEntry Gas</label>
    <length>18</length>
    <type>Text</type>
</CustomField>